style the index page

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,1 +1,19 @@
-<h1>Welcome to Rockin Sweets</h1>
+<h1 class="main-heading text-center" >Welcome to Rockin' Sweets</h1>
+
+<div class="card-box col-xs-10 col-xs-offset-1">
+	<p>
+		Brownie I love tootsie roll ice cream brownie. Powder cake cake muffin chocolate icing jelly. Pie toffee sweet roll tart tart. Sugar plum jelly beans bonbon icing cotton candy cookie. Tootsie roll gummi bears I love chupa chups I love sweet brownie dragée. Toffee pudding sesame snaps pie cake. Caramels chocolate cake pastry candy I love candy I love. Chocolate cake soufflé candy canes. Oat cake brownie lollipop. Halvah croissant pie cake apple pie tiramisu jujubes sweet roll cake. Tootsie roll liquorice cookie I love cake pie chocolate cake dragée. Chupa chups marzipan tootsie roll chocolate cake.
+	</p>
+
+	<p>
+		Tart ice cream brownie sweet roll I love gummi bears sweet sweet chocolate bar. Jujubes chocolate cake lollipop pie tootsie roll gummies. Sesame snaps tootsie roll macaroon cheesecake danish tootsie roll ice cream jelly-o. Wafer halvah toffee pastry apple pie I love apple pie. Halvah dragée gummi bears jujubes. Sugar plum gummies chocolate bar biscuit ice cream. Oat cake croissant gummies sugar plum apple pie croissant candy canes. Candy carrot cake gummies I love. Marzipan caramels tart marzipan gingerbread apple pie bonbon gingerbread cotton candy. I love marshmallow soufflé soufflé I love cheesecake ice cream. Gingerbread cotton candy dessert chocolate cake. Candy canes I love powder candy canes donut sweet roll. Wafer marshmallow pudding danish jelly.
+	</p>
+
+	<p>
+		Brownie I love brownie gingerbread dessert jelly cupcake candy canes. Brownie muffin lollipop. Jujubes jujubes cake icing liquorice. Fruitcake I love topping. Chupa chups chocolate cake I love brownie sugar plum chocolate bar I love candy canes cookie. Sugar plum apple pie gummies tootsie roll gummies. I love powder jujubes gingerbread jelly beans pudding bonbon. Pastry halvah marzipan. Tart lollipop jelly beans. Dessert sesame snaps cookie. I love I love tiramisu liquorice wafer candy canes carrot cake cupcake. Chupa chups powder sugar plum muffin chupa chups bear claw pie gummies marshmallow. Biscuit soufflé sweet sugar plum I love jelly cotton candy.
+	</p>
+
+	<p>	
+		I love jelly I love I love soufflé marzipan. Powder halvah dessert. Chocolate bar fruitcake sweet roll lemon drops. Liquorice dragée halvah. Wafer sweet roll pudding. Jujubes dragée gingerbread. Tart bonbon jelly marshmallow I love carrot cake muffin chocolate bar caramels. Sweet ice cream jelly beans jujubes bonbon jelly beans toffee pie. Cupcake cheesecake sesame snaps chupa chups icing. Sugar plum I love pie I love candy canes. I love tart jujubes oat cake. Gummies oat cake tiramisu danish I love cake I love. Powder powder powder cheesecake tiramisu. Caramels cheesecake pie halvah jelly beans tiramisu lollipop.
+	</p>
+</div>
