add recipe index and show, add their action on controller, add validation on recipe model

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,6 +1,11 @@
-<h1 class="main-heading text-center" >Welcome to Rockin' Sweets</h1>
+<h1 class="text-center" >Welcome to Rockin' Sweets</h1>
 
 <div class="card-box col-xs-10 col-xs-offset-1">
+
+	<%= link_to "View Rockin' Sweets Recipes", recipes_path , :class => 'btn btn-danger' %>
+	<br />
+	<br />
+
 	<p>
 		Brownie I love tootsie roll ice cream brownie. Powder cake cake muffin chocolate icing jelly. Pie toffee sweet roll tart tart. Sugar plum jelly beans bonbon icing cotton candy cookie. Tootsie roll gummi bears I love chupa chups I love sweet brownie dragée. Toffee pudding sesame snaps pie cake. Caramels chocolate cake pastry candy I love candy I love. Chocolate cake soufflé candy canes. Oat cake brownie lollipop. Halvah croissant pie cake apple pie tiramisu jujubes sweet roll cake. Tootsie roll liquorice cookie I love cake pie chocolate cake dragée. Chupa chups marzipan tootsie roll chocolate cake.
 	</p>
