--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,22 +1,22 @@
-.main-heading{
+h1, h2{
 	color: #6E6869;
 }
 
 .card-box {
-    background:#FFF;
-    -moz-box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
-    -webkit-box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
-    box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
-    color:#272727;
-    border-radius:2px;
-    margin-top:10px;
-    margin-bottom:15px;
-    padding:20px;
+		background:#FFF;
+		-moz-box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+		-webkit-box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+		box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+		color:#272727;
+		border-radius:2px;
+		margin-top:10px;
+		margin-bottom:15px;
+		padding:20px;
 }
 
-.card-box p {
-    color: #6E6869;
-    font-weight: 300px;
+.card-box{
+		color: #6E6869;
+		font-weight: 300px;
 }
 
 body{
