--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,10 +1,26 @@
-<h1 class="text-center">Recipes</h1>
+<h1 class="text-center">New Recipe</h1>
 
 <div class="card-box col-xs-10 col-xs-offset-1">
-<%= simple_form_for @recipe do |f| %>
+<%= simple_form_for @recipe, url: recipes_path do |f| %>
+	<% if @recipe.errors.any? %>
+		<div id="error_explanation">
+			<h2>
+				<%= pluralize(@recipe.errors.count, "error") %> prohibited
+				this recipe from being saved:
+			</h2>
+			<ul>
+				<% @recipe.errors.full_messages.each do |msg| %>
+					<li><%= msg %></li>
+				<% end %>
+			</ul>
+		</div>
+	<% end %>
+
 	<%= f.input :title %>
 	<%= f.input :text, label: 'Instructions' %>
 	<br />
 	<%= f.submit 'Create Recipe', :class => 'btn btn-danger' %>
 <% end %>
+	<br />
+	<%= link_to 'Back', recipes_path , :class => 'btn btn-primary' %>
 </div>
